2010-07-25  Joseph Corneli  <jac2349@dhcp-pub-248.open.pub>

        Updates to INSTALL file.
	* INSTALL: Rearranged and updated instructions so they make more
	sense.

2010-07-02  Jan Moringen  <jmoringe@techfak.uni-bielefeld.de>

	Proper comments for local variables in README, INSTALL
	* README: added proper comments to local variables
	* INSTALL: added proper comments to local variables

2010-06-15  Jan Moringen  <scymtym@users.sourceforge.net>

	Require rudel-util.el in rudel-mode.el
	* rudel-mode.el (header): minor fix in history section
	(require rudel-util): new require; for object-{add,remove}-hook

	New milestones and tags, reassigned items in TODO
	* TODO (Future): reassigned and updated some items
	(Milestone rudel-0.5): new milestone
	(Milestone rudel-0.4): added tag 0.4; scheduled tasks "show cursor
	positions of other users", "integrate unit tests", "only read
	color hue"; minor fixes
	(Milestone rudel-0.3): added tag 0.3
	(Milestone rudel-0.2): added tags 0.2 and released
	(Milestone rudel-0.1): added tags 0.1 and released

	Hopefully fixed some notorious problems in rudel-compile.el
	* rudel-compile.el (require cl): new require; for flet
	(toplevel compilation): let-bind filename since there have been
	some compilation problems related to `filename' being void; inject
	requires for cl and rudel-backend into rudel-loaddefs.el

	Mention Debian/Ubuntu packages in INSTALL
	* INSTALL (REQUIREMENTS): mention Debian/Ubuntu packages for
	gnutls-cli and Avahi
	(footer): added settings startup, title and author

	Removed redundant checks in -factory::rudel-suitable-backends
	* rudel-backend.el
	(rudel-backend-factory::rudel-suitable-backends): do not check the
	cdr being an object twice

	Better handling of loading errors in rudel-backend.el
	* rudel-backend.el (header): minor fix in history
	(rudel-backend-factory::rudel-all-backends): added optional
	argument only-loaded; only return unloaded backends if requested