@@ -465,7 +465,7 @@ collaborative editing session can subscribe to."
       ;; Add a handler to the kill-buffer hook to unsubscribe from the
       ;; document when the buffer gets killed.
       (add-hook 'kill-buffer-hook
-		#'rudel-unpublish-buffer
+		#'rudel-unsubscribe
 		nil t)
 
       ;;
@@ -486,7 +486,7 @@ Do nothing, if THIS is not attached to any buffer."
       (with-current-buffer buffer
 	;; Remove our handler function from the kill-buffer hook.
 	(remove-hook 'kill-buffer-hook
-		     #'rudel-unpublish-buffer
+		     #'rudel-unsubscribe
 		     t)
 
 	;; Remove our handler function from the after-change hook.
@@ -1046,9 +1046,11 @@ If BUFFER is nil, the current buffer is used."
   )
 
 ;;;###autoload
-(defun rudel-unpublish-buffer (&optional buffer)
-  "Deny peers access to BUFFER in a collaborative editing session.
-If BUFFER is nil, the current is used."
+(defun rudel-unsubscribe (&optional buffer)
+  "Detaches BUFFER from the collaborative editing session.
+The most recent version of the content will remain in the
+buffer but not be affected by future changes from other
+peers. If BUFFER is nil, the current is used."
   (interactive)
 
   ;; Make sure we have a session.
